# grip4rust

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  DONATE.md  README.md  ROADMAP.md
.github/: copilot-instructions.md
.grip_cache/: cache.json
scripts/: run_stage_1.ps1  run_stage_2.ps1
src/: app.rs  args.rs  collector.rs  config.rs  contribution_schedule.rs  default_scorer.rs  function_info.rs  grip_report.rs  hidden_dep_finder.rs  io_call_finder.rs  item_counts.rs  lib.rs  main.rs  module_stats.rs  overall_stats.rs  reporter.rs  scorer.rs  stdout_reporter.rs  walk.rs
src/traits/: scorer.rs
tests/: all_tests.rs  app_tests.rs  args_tests.rs  collector_tests.rs  config_tests.rs  default_scorer_tests.rs  grip_report_tests.rs  item_counts_tests.rs  lib_tests.rs  main_tests.rs  module_stats_tests.rs  overall_stats_tests.rs  reporter_tests.rs  scorer_tests.rs  stdout_reporter_tests.rs  walk_tests.rs
tests/fixtures/clean_calc/src/: display.rs  lib.rs  ops.rs  processor.rs  types.rs
tests/fixtures/clean_calc/tests/: analysis_tests.rs
tests/fixtures/dep_clean/: Cargo.toml
tests/fixtures/dep_clean/src/: lib.rs
tests/fixtures/dep_clean/tests/: analysis_tests.rs
tests/fixtures/dep_injected/: Cargo.toml
tests/fixtures/dep_injected/src/: lib.rs
tests/fixtures/dep_injected/tests/: analysis_tests.rs
tests/fixtures/dep_mixed/: Cargo.toml
tests/fixtures/dep_mixed/src/: lib.rs
tests/fixtures/dep_mixed/tests/: analysis_tests.rs
tests/fixtures/dep_monolith/: Cargo.toml
tests/fixtures/dep_monolith/src/: lib.rs
tests/fixtures/dep_monolith/tests/: analysis_tests.rs
tests/fixtures/sloppy_calc/src/: display.rs  lib.rs  ops.rs  processor.rs  types.rs
tests/fixtures/sloppy_calc/tests/: analysis_tests.rs
tests/fixtures/trait_check/: Cargo.toml
tests/fixtures/trait_check/src/: lib.rs  machinery.rs  output.rs  pure_geometry.rs  validation.rs
tests/fixtures/trait_check/tests/: analysis_tests.rs
