[package]
name = "cargo-grip"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A cargo subcommand for measuring Rust testability"
authors = ["Umberto Gotti <umberto.gotti@umbertogotti.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/umbgtt10/grip"
keywords = ["cargo", "subcommand", "search", "grep", "cli"]
categories = ["development-tools::cargo-plugins", "command-line-utilities"]

autotests = false

[lib]
name = "grip"

[[test]]
name = "all_tests"
path = "tests/all_tests.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quote = "1"
syn = { version = "2", features = ["full", "visit"] }
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
